Fix gap between Sessions heading and items with description

--- a/src/components/SessionTemplatesControl/SessionTemplatesControl.scss
+++ b/src/components/SessionTemplatesControl/SessionTemplatesControl.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 8px;
+  gap: 16px;
 }
 .session_templates_control__template {
   display: flex;
